<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Frames.EntrySetProfileDataFragment"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/input_name_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_name"
            style="@style/default_text_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="26sp"
            android:layout_marginTop="10sp"/>
        
        <EditText
            android:id="@+id/input_name_ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textbox_gray"
            android:minWidth="250sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_name_TV"
            android:layout_marginTop="30sp"
            android:textSize="18sp"
            android:maxLength="25"
            android:hint="@string/input_name_hint"
            android:textColorHint="@color/hint_white"/>

        <Button
            android:id="@+id/confirm_name_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/default_button"
            android:minWidth="250sp"
            app:layout_constraintTop_toBottomOf="@id/input_name_ET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30sp"
            android:textSize="18sp"
            android:text="@string/confirm_name"
            android:padding="15sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>