<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Frames.EntryPhoneNumberWriteFragment"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30sp">
        <TextView
            android:id="@+id/write_phone_number_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:textSize="22sp"
            style="@style/default_text_white"
            android:text="@string/write_phone_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
            android:id="@+id/enter_phone_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            app:layout_constraintTop_toBottomOf="@+id/write_phone_number_TV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:minWidth="250sp"
            android:layout_marginBottom="50sp"
            style="@style/textbox_gray"
            android:inputType="phone"
            android:maxLength="12"
            android:digits="+1234567890"
            android:textColorHint="@color/hint_white"/>

        <Button
            android:id="@+id/get_confirmation_code_button"
            style="@style/default_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/get_phone_code"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_phone_et" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>