<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Frames.EntryFirstFragment"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/greetingEntryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="10sp"
            android:text="@string/greeting"
            style="@style/default_text_white"
            android:textSize="22sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/EntryButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="300sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/greetingEntryTV"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingTop="50sp"
            android:paddingLeft="50sp"
            android:paddingRight="50sp">
            <Button
                android:drawableLeft="@drawable/phone_ic_32"
                android:id="@+id/Phone_Login_Button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/default_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local_log_in"
                android:paddingLeft="20sp" />
            <Button
                android:id="@+id/Google_Login_Button"
                app:layout_constraintTop_toTopOf="@id/Phone_Login_Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/default_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vk_log_in"
                android:drawableLeft="@drawable/google_ic_32"
                android:paddingLeft="20sp"
                app:iconGravity="textStart"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>